--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ dependencies {
 		'org.slf4j:slf4j-log4j12:1.7.7',
 		'it.unimi.dsi:dsiutils:2.3.3',
 		'com.github.spotbugs:spotbugs-annotations:3.1.1',
-		'com.twmacinta:fast-md5:2.7.1'
+		'com.twmacinta:fast-md5:2.7.1',
+		'com.github.spotbugs:spotbugs-annotations:3.1.1'
 
 	// Runtime
 	runtime fileTree(dir: 'libs', include: '*.jar')
